# linkerhand-cpp-sdk

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.bat  build.sh  script.sh
.github/workflows/: ci.yml
cmake/: LinkerHandCPPSDKConfig.cmake.in  linkerhand-cpp-sdk-config-version.cmake  linkerhand-cpp-sdk-config.cmake
demo/: CMakeLists.txt  main.cpp
docs/: API-Reference.md  CI-CD.md  FAQ.md  NAMING_IMPROVEMENTS.md  TROUBLESHOOTING.md
examples/: CMakeLists.txt  _win_console_utf8.h  action_group_show_l10.cpp  linker_hand_example.cpp  sources.cmake  test.cpp  test_0.cpp  test_conversion.cpp  test_g20_can_0.cpp  test_g20_can_1.cpp  test_l10.cpp  test_l10_can_0.cpp  test_l10_can_1.cpp  test_l10_modbus.cpp  test_l20_can_0.cpp  test_l21_can_0.cpp  test_l7_can_0.cpp  test_l7_can_1.cpp  test_l7_modbus_0.cpp  test_l7_modbus_1.cpp  test_o20_canfd_0.cpp  test_o20_canfd_1.cpp  test_o6_can_0.cpp  test_o6_can_1.cpp  test_o6_can_3.cpp  test_o6_modbus_0.cpp  test_o6_modbus_1.cpp  test_o6_modbus_2.cpp  toolset_example.cpp
examples/L10/: action_group_show.cpp
include/: CanBus.h  CanBusFactory.h  CanFrame.h  Common.h  ErrorCode.h  EtherCAT.h  HandFactory.h  ICanBus.h  ICommunication.h  IHand.h  LinkerHandApi.h  LinkerHandL10.h  LinkerHandL20.h  LinkerHandL25.h  LinkerHandL6.h  LinkerHandL7.h  Logger.h  ModBus.h  ModbusLinkerHandL10.h  PCANBus.h  RangeToArc.h
include/api/: LinkerHandApi.h
include/communication/: CanBus.h  CanBusFactory.h  CanFD.h  CanFrame.h  CommFactory.h  CommunicationCallbacks.h  EtherCAT.h  ICanBus.h  ICanFD.h  ICommunication.h  IEtherCAT.h  IModbus.h  Modbus.h  PCANBus.h
include/core/: Common.h  ErrorCode.h  LinkerHandExport.h
lib/aarch64/: liblinkerhand_cpp_sdk.so.1  liblinkerhand_cpp_sdk.so.1.5.8
lib/linux/arm64/: linkerhand_cpp_sdk.so.2  linkerhand_cpp_sdk.so.2.0.0
lib/linux/x86_64/: linkerhand_cpp_sdk.so.2.0.0
lib/win64/msvc/: linkerhand_cpp_sdk.exp  linkerhand_cpp_sdk.lib
lib/x86_64/: liblinkerhand_cpp_sdk.so.1.5.8
linker_hand/: CMakeLists.txt
linker_hand/examples/: Examples.cpp
linker_hand/include/: Common.h  HandFactory.h  LinkerHandL6.h
linker_hand/src/: LinkerHandL6.cpp
src/: main.cpp
tests/: README.md
tests/unit/: test_Common.cpp  test_IHand_Utils.cpp
